fix node-box gap

--- a/essentia-web/src/app/about/page.module.css
+++ b/essentia-web/src/app/about/page.module.css
@@ -21,7 +21,8 @@
 
 .intro {
   display: grid;
-  height: 100%;
+  height: auto;
+  min-height: auto;
   justify-self: center;
   gap: 64px;
   max-width: clamp(200px, 50vw, 100vw);
@@ -70,7 +71,9 @@
 
 
 .organization{
-  height: 100%;
+  height: auto;
+  min-height: auto;
+  align-content: start;
 }
 
 .nodeBox{
